@@ -21,6 +21,7 @@ import java.io.IOException;
 import java.io.ObjectOutputStream;
 import java.util.Map;
 import java.util.function.BiFunction;
+import java.util.function.Function;
 
 import org.apache.kafka.common.header.Headers;
 import org.apache.kafka.common.header.internals.RecordHeader;
@@ -37,6 +38,7 @@ import org.springframework.util.ClassUtils;
  *
  * @author Gary Russell
  * @author Artem Bilan
+ * @author Victor Perez Rey
  *
  * @since 2.2
  *
@@ -82,7 +84,7 @@ public class ErrorHandlingDeserializer2<T> implements Deserializer<T> {
 
 	private boolean isForKey;
 
-	private BiFunction<byte[], Headers, T> failedDeserializationFunction;
+	private Function<FailedDeserializationInfo, T> failedDeserializationFunction;
 
 	public ErrorHandlingDeserializer2() {
 		super();
@@ -92,7 +94,23 @@ public class ErrorHandlingDeserializer2<T> implements Deserializer<T> {
 		this.delegate = setupDelegate(delegate);
 	}
 
+	/**
+	 * Provide an alternative supplying mechanism when deserialization fails.
+	 * @param failedDeserializationFunction the {@link BiFunction} to use.
+	 * @deprecated since 2.2.8 in favor of {@link #setFailedDeserializationFunction(Function)}.
+	 */
+	@Deprecated
 	public void setFailedDeserializationFunction(BiFunction<byte[], Headers, T> failedDeserializationFunction) {
+		setFailedDeserializationFunction((failed) ->
+				failedDeserializationFunction.apply(failed.getData(), failed.getHeaders()));
+	}
+
+	/**
+	 * Provide an alternative supplying mechanism when deserialization fails.
+	 * @param failedDeserializationFunction the {@link Function} to use.
+	 * @since 2.2.8
+	 */
+	public void setFailedDeserializationFunction(Function<FailedDeserializationInfo, T> failedDeserializationFunction) {
 		this.failedDeserializationFunction = failedDeserializationFunction;
 	}
 
@@ -156,9 +174,9 @@ public class ErrorHandlingDeserializer2<T> implements Deserializer<T> {
 			try {
 				Object value = configs.get(configKey);
 				Class<?> clazz = value instanceof Class ? (Class<?>) value : ClassUtils.forName((String) value, null);
-				Assert.isTrue(BiFunction.class.isAssignableFrom(clazz), "'function' must be a 'BiFunction	', not a "
+				Assert.isTrue(Function.class.isAssignableFrom(clazz), "'function' must be a 'Function ', not a "
 						+ clazz.getName());
-				this.failedDeserializationFunction = (BiFunction<byte[], Headers, T>) clazz.newInstance();
+				this.failedDeserializationFunction = (Function<FailedDeserializationInfo, T>) clazz.newInstance();
 			}
 			catch (ClassNotFoundException | LinkageError | InstantiationException | IllegalAccessException e) {
 				throw new IllegalStateException(e);
@@ -172,9 +190,7 @@ public class ErrorHandlingDeserializer2<T> implements Deserializer<T> {
 			return this.delegate.deserialize(topic, data);
 		}
 		catch (Exception e) {
-			return this.failedDeserializationFunction != null
-					? this.failedDeserializationFunction.apply(data, null)
-					: null;
+			return recoverFromSupplier(topic, null, data, e);
 		}
 	}
 
@@ -185,9 +201,18 @@ public class ErrorHandlingDeserializer2<T> implements Deserializer<T> {
 		}
 		catch (Exception e) {
 			deserializationException(headers, data, e);
-			return this.failedDeserializationFunction != null
-					? this.failedDeserializationFunction.apply(data, headers)
-					: null;
+			return recoverFromSupplier(topic, headers, data, e);
+		}
+	}
+
+	private T recoverFromSupplier(String topic, Headers headers, byte[] data, Exception exception) {
+		if (this.failedDeserializationFunction != null) {
+			FailedDeserializationInfo failedDeserializationInfo =
+					new FailedDeserializationInfo(topic, headers, data, this.isForKey, exception);
+			return this.failedDeserializationFunction.apply(failedDeserializationInfo);
+		}
+		else {
+			return null;
 		}
 	}
 
@@ -200,7 +225,8 @@ public class ErrorHandlingDeserializer2<T> implements Deserializer<T> {
 
 	private void deserializationException(Headers headers, byte[] data, Exception e) {
 		ByteArrayOutputStream stream = new ByteArrayOutputStream();
-		DeserializationException exception = new DeserializationException("failed to deserialize", data, this.isForKey, e);
+		DeserializationException exception =
+				new DeserializationException("failed to deserialize", data, this.isForKey, e);
 		try (ObjectOutputStream oos = new ObjectOutputStream(stream)) {
 			oos.writeObject(exception);
 		}
@@ -209,8 +235,8 @@ public class ErrorHandlingDeserializer2<T> implements Deserializer<T> {
 			try (ObjectOutputStream oos = new ObjectOutputStream(stream)) {
 				exception = new DeserializationException("failed to deserialize",
 						data, this.isForKey, new RuntimeException("Could not deserialize type "
-								+ e.getClass().getName() + " with message " + e.getMessage()
-								+ " failure: " + ex.getMessage()));
+						+ e.getClass().getName() + " with message " + e.getMessage()
+						+ " failure: " + ex.getMessage()));
 				oos.writeObject(exception);
 			}
 			catch (IOException ex2) {
@@ -218,7 +244,9 @@ public class ErrorHandlingDeserializer2<T> implements Deserializer<T> {
 			}
 		}
 		headers.add(
-				new RecordHeader(this.isForKey ? KEY_DESERIALIZER_EXCEPTION_HEADER : VALUE_DESERIALIZER_EXCEPTION_HEADER,
+				new RecordHeader(this.isForKey
+						? KEY_DESERIALIZER_EXCEPTION_HEADER
+						: VALUE_DESERIALIZER_EXCEPTION_HEADER,
 						stream.toByteArray()));
 	}
 
